<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center" >
    
    <EditText
        android:id="@+id/input_data_et"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/input_data_hint"/>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:layout_marginTop="20dp">
    
	    <Button 
	        android:id="@+id/write_btn"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:text="@string/write_txt"
	        android:textSize="20sp"/>
        
        <Button 
            android:id="@+id/read_btn"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20dp"
	        android:text="@string/read_txt"
	        android:textSize="20sp"/>
        
    </LinearLayout>
    
    <TextView 
        android:id="@+id/output_data_tv"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="@android:color/holo_red_light"/>
    
</LinearLayout>
